# risk-bridge

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  REPRODUCTION.md  USER_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
cases/: README.md  __init__.py
cases/external_calibration_validation/: README.md  __init__.py  run_suite.py  suite.py
cases/numerical_validation/: README.md  run_suite.py  suite.py
cases/runtime_support_scaling/: README.md  __init__.py  run_suite.py  suite.py
cases/synthetic_transport_example/: README.md  __init__.py  case_config.json  run_case.py  suite.py
docs/: README.md
docs/architecture/: README.md  python_pipeline_analysis.md  python_solver_strategy.md
docs/usage/: README.md  initial-tool-setup.md  python_pipeline_user_guide.md  quickstart_walkthrough.md
examples/: simulated_quickstart.py  user_data_template.py
src/risk_bridge/: __init__.py  api.py  calibration.py  cli.py  config.py  constraints.py  external.py  likelihood.py  metrics.py  optimize.py  output_schema.py  pipeline.py  preprocess.py  reproducibility.py  runs.py  sampling.py  simulate.py  tabular.py  types.py
tests/: test_api_unit.py  test_calibration_export_unit.py  test_calibration_unit.py  test_config_types.py  test_constraints_unit.py  test_external_calibration_validation_unit.py  test_likelihood_unit.py  test_metrics_unit.py  test_numerical_validation_unit.py  test_optimize_unit.py  test_pipeline_unit.py  test_preprocess_unit.py  test_reproducibility_unit.py  test_runtime_support_scaling_unit.py  test_sampling_unit.py  test_scenario1_pipeline_unit.py  test_simulate_unit.py  test_synthetic_transport_example.py
