[project]
name = "risk-bridge"
version = "1.0.0"
description = "Risk bridging with constrained maximum likelihood estimation"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [
  { name = "Risk Bridge contributors" },
]
keywords = ["risk-modeling", "calibration", "constrained-optimization", "maximum-likelihood", "biostatistics"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=2.4.2",
  "pandas>=3.0.1",
  "polars>=1.38.1",
  "scikit-learn>=1.8.0",
  "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://github.com/<your-org>/risk-bridge"
Repository = "https://github.com/<your-org>/risk-bridge"
Issues = "https://github.com/<your-org>/risk-bridge/issues"

[project.scripts]
risk-bridge = "risk_bridge.cli:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "ruff>=0.14.0",
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
files = [
  "src/risk_bridge/api.py",
  "src/risk_bridge/config.py",
  "src/risk_bridge/pipeline.py",
  "src/risk_bridge/cli.py",
  "src/risk_bridge/types.py",
]
follow_imports = "skip"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true

