[project]
name = "risk-bridge"
version = "1.0.3"
description = "Risk Bridging through Constrained MLE"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Risk Bridge contributors" },
]
keywords = ["risk-modeling", "calibration", "constrained-optimization", "maximum-likelihood", "biostatistics"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "comp-builders>=1.0.0",
  "numpy>=2.4.2",
  "pandas>=3.0.1",
  "polars>=1.38.1",
  "rdata>=1.0.0",
  "scikit-learn>=1.8.0",
  "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://github.com/SaehwanPark/risk-bridge"
Repository = "https://github.com/SaehwanPark/risk-bridge"
Issues = "https://github.com/SaehwanPark/risk-bridge/issues"

[project.scripts]
risk-bridge = "risk_bridge.cli:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "basedpyright>=1.39.6",
  "matplotlib>=3.11.0",
  "pytest>=9.0.2",
]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = [
  "src/risk_bridge/api.py",
  "src/risk_bridge/config.py",
  "src/risk_bridge/pipeline.py",
  "src/risk_bridge/cli.py",
  "src/risk_bridge/types.py",
]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
